增加 图片识别功能 增加 S3 存储 增加 图片类型消息 改进 消息存储类型 更新 存储配置文件 更新 Swagger 文档
